# llm-eval-harness

./: .gitignore  README.md  pyproject.toml
evals/: test.yaml
harness/: cli.py  runner.py  scorers.py  storage.py
